fixed iPad bug with parallax images, and update menu to use css instead of javascript for functionality

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -22,3 +22,8 @@
 // Modules
 // ----------------------------------------------------------------------
 @import "modules/upgrade-warning";
+
+// ----------------------------------------------------------------------
+// Functions
+// ----------------------------------------------------------------------
+@import "base/functions";
