--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -17,7 +17,8 @@
           <div class="list-container">
               <ul>
                   <li>
-                      <a href="javascript:;" class="menu-item">ABOUT<span></span></a>
+                      <input type="checkbox" id="menu-item-about" />
+                      <label for="menu-item-about" role="link" tabindex="0">ABOUT<span></span></label>
                       <ul>
                         <li><a href="//www.army.mil/info/organization/">Organization</a></li>
                         <li><a href="//www.army.mil/info/institution/publicAffairs/">Public Affairs</a></li>
@@ -25,7 +26,8 @@
                       </ul>
                   </li>
                   <li>
-                      <a href="javascript:;" class="menu-item">NEWS<span></span></a>
+                      <input type="checkbox" id="menu-item-news" />
+                      <label for="menu-item-news" role="link" tabindex="0">NEWS<span></span></label>
                       <ul>
                         <li><a href="/news">Army Worldwide</a></li>
                         <li><a href="/news/newsreleases">Press Releases</a></li>
@@ -34,7 +36,8 @@
                       </ul>
                   </li>
                   <li>
-                      <a href="javascript:;" class="menu-item">MEDIA<span></span></a>
+                      <input type="checkbox" id="menu-item-media" />
+                      <label for="menu-item-media" role="link" tabindex="0">MEDIA<span></span></label>
                       <ul>
                         <li><a href="/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmynews">Videos</a></li>
@@ -44,7 +47,8 @@
               </ul>
               <ul>
                   <li>
-                      <a href="javascript:;" class="menu-item">LEADERS<span></span></a>
+                      <input type="checkbox" id="menu-item-leaders" />
+                      <label for="menu-item-leaders" role="link" tabindex="0">LEADERS<span></span></label>
                       <ul>
                         <li><a href="//www.army.mil/leaders/sa/">Secretary</a></li>
                         <li><a href="//www.army.mil/leaders/usa/">Under Secretary</a></li>
@@ -54,7 +58,8 @@
                       </ul>
                   </li>
                   <li>
-                      <a href="javascript:;" class="menu-item">FEATURES<span></span></a>
+                      <input type="checkbox" id="menu-item-features" />
+                      <label for="menu-item-features" role="link" tabindex="0">FEATURES<span></span></label>
                       <ul>
                         <li><a href="//www.army.mil/features/#valor">Valor</a></li>
                         <li><a href="//www.army.mil/features/#events">Events</a></li>
