--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -15,10 +15,10 @@
     <div class="nav-window menu-window">
         <div class="menu-container">
           <div class="list-container">
-              <ul>
+              <ul role="menu">
                   <li>
                       <input type="checkbox" id="menu-item-about" />
-                      <label for="menu-item-about" role="link" tabindex="-1">ABOUT<span></span></label>
+                      <label for="menu-item-about" role="menuitem">ABOUT<span></span></label>
                       <ul>
                         <li><a href="//www.army.mil/info/organization/">Organization</a></li>
                         <li><a href="//www.army.mil/info/institution/publicAffairs/">Public Affairs</a></li>
@@ -27,7 +27,7 @@
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-news" />
-                      <label for="menu-item-news" role="link" tabindex="-1">NEWS<span></span></label>
+                      <label for="menu-item-news" role="menuitem">NEWS<span></span></label>
                       <ul>
                         <li><a href="/news">Army Worldwide</a></li>
                         <li><a href="/news/newsreleases">Press Releases</a></li>
@@ -37,7 +37,7 @@
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-media" />
-                      <label for="menu-item-media" role="link" tabindex="-1">MEDIA<span></span></label>
+                      <label for="menu-item-media" role="menuitem">MEDIA<span></span></label>
                       <ul>
                         <li><a href="/photos">Photos</a></li>
                         <li><a href="https://www.youtube.com/user/usarmynews">Videos</a></li>
@@ -45,10 +45,10 @@
                       </ul>
                   </li>
               </ul>
-              <ul>
+              <ul role="menu">
                   <li>
                       <input type="checkbox" id="menu-item-leaders" />
-                      <label for="menu-item-leaders" role="link" tabindex="-1">LEADERS<span></span></label>
+                      <label for="menu-item-leaders" role="menuitem">LEADERS<span></span></label>
                       <ul>
                         <li><a href="//www.army.mil/leaders/sa/">Secretary</a></li>
                         <li><a href="//www.army.mil/leaders/usa/">Under Secretary</a></li>
@@ -59,7 +59,7 @@
                   </li>
                   <li>
                       <input type="checkbox" id="menu-item-features" />
-                      <label for="menu-item-features" role="link" tabindex="-1">FEATURES<span></span></label>
+                      <label for="menu-item-features" role="menuitem">FEATURES<span></span></label>
                       <ul>
                         <li><a href="//www.army.mil/features/#valor">Valor</a></li>
                         <li><a href="//www.army.mil/features/#events">Events</a></li>
