--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -71,37 +71,37 @@
                     <ul>
                       <li class="social-button facebook-button">
                         <a target="_blank" href="https://www.facebook.com/USArmy">
-                          <span></span>
+                          <span>Official U.S. Army Facebook</span>
                         </a>
                       </li>
                       <li class="social-button twitter-button">
                         <a target="_blank" href="https://twitter.com/USArmy">
-                          <span></span>
+                          <span>Official U.S. Army Twitter</span>
                         </a>
                       </li>
                       <li class="social-button googleplus-button">
                         <a target="_blank" href="https://plus.google.com/114333599862985909549">
-                          <span></span>
+                          <span>Official U.S. Army Google+</span>
                         </a>
                       </li>
                       <li class="social-button pinterest-button">
                         <a target="_blank" href="http://pinterest.com/USarmy">
-                          <span></span>
+                          <span>Official U.S. Army Pinterest</span>
                         </a>
                       </li>
                       <li class="social-button youtube-button">
                         <a target="_blank" href="https://www.youtube.com/USarmy">
-                          <span></span>
+                          <span>Official U.S. Army Youtube</span>
                         </a>
                       </li>
                       <li class="social-button flickr-button">
                         <a target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter">
-                          <span></span>
+                          <span>Official U.S. Army Flickr</span>
                         </a>
                       </li>
                       <li class="social-button instagram-button">
                         <a target="_blank" href="https://instagram.com/usarmy">
-                          <span></span>
+                          <span>Official U.S. Army Instagram</span>
                         </a>
                       </li>
                     </ul>
