--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -1,30 +1,30 @@
-<div class="social">
+<ul class="social">
   <!-- Regular White Buttons -->
-  <div class="social-button facebook-button"><a href="#"><span></span></a></div>
-  <div class="social-button twitter-button"><a href="#"><span></span></a></div>
-  <div class="social-button googleplus-button"><a href="#"><span></span></a></div>
-  <div class="social-button pinterest-button"><a href="#"><span></span></a></div>
-  <div class="social-button flickr-button"><a href="#"><span></span></a></div>
-  <div class="social-button slideshare-button"><a href="#"><span></span></a></div>
-  <div class="social-button youtube-button"><a href="#"><span></span></a></div>
-  <div class="social-button instagram-button"><a href="#"><span></span></a></div>
-  <div class="social-button vimeo-button"><a href="#"><span></span></a></div>
-  <div class="social-button linkedin-button"><a href="#"><span></span></a></div>
-  <div class="social-button armylive-button"><a href="#"><span></span></a></div>
-  <div class="social-button snapchat-button"><a href="#"><span></span></a></div>
-  <div class="social-button email-button"><a href="#"><span></span></a></div>
+  <li class="social-button facebook-button"><a href="#" title="Official U.S. Army Facebook"><span>Official U.S. Army Facebook</span></a></li>
+  <li class="social-button twitter-button"><a href="#" title="Official U.S. Army Twitter"><span>Official U.S. Army Twitter</span></a></li>
+  <li class="social-button googleplus-button"><a href="#" title="Official U.S. Army Google+"><span>Official U.S. Army Google+</span></a></li>
+  <li class="social-button pinterest-button"><a href="#" title="Official U.S. Army Pinterest"><span>Official U.S. Army Pinterest</span></a></li>
+  <li class="social-button flickr-button"><a href="#" title="Official U.S. Army Flickr"><span>Official U.S. Army Flickr</span></a></li>
+  <li class="social-button slideshare-button"><a href="#" title="Official U.S. Army Slideshare"><span>Official U.S. Army Slideshare</span></a></li>
+  <li class="social-button youtube-button"><a href="#" title="Official U.S. Army Youtube"><span>Official U.S. Army Youtube</span></a></li>
+  <li class="social-button instagram-button"><a href="#" title="Official U.S. Army Instagram"><span>Official U.S. Army Instagram</span></a></li>
+  <li class="social-button vimeo-button"><a href="#" title="Official U.S. Army Vimeo"><span>Official U.S. Army Vimeo</span></a></li>
+  <li class="social-button linkedin-button"><a href="#" title="Official U.S. Army Linkedin"><span>Official U.S. Army Linkedin</span></a></li>
+  <li class="social-button armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span>Official U.S. Army Army Live Blog</span></a></li>
+  <li class="social-button snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
+  <li class="social-button email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
   <!-- Regular Black Buttons -->
-  <div class="social-button-black facebook-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black twitter-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black googleplus-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black pinterest-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black flickr-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black slideshare-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black youtube-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black instagram-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black vimeo-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black linkedin-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black armylive-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black snapchat-button"><a href="#"><span></span></a></div>
-  <div class="social-button-black email-button"><a href="#"><span></span></a></div>
-</div>
+  <li class="social-button-black facebook-button"><a href="#" title="Official U.S. Army Facebook"><span>Official U.S. Army Facebook</span></a></li>
+  <li class="social-button-black twitter-button"><a href="#" title="Official U.S. Army Twitter"><span>Official U.S. Army Twitter</span></a></li>
+  <li class="social-button-black googleplus-button"><a href="#" title="Official U.S. Army Google+"><span>Official U.S. Army Google+</span></a></li>
+  <li class="social-button-black pinterest-button"><a href="#" title="Official U.S. Army Pinterest"><span>Official U.S. Army Pinterest</span></a></li>
+  <li class="social-button-black flickr-button"><a href="#" title="Official U.S. Army Flickr"><span>Official U.S. Army Flickr</span></a></li>
+  <li class="social-button-black slideshare-button"><a href="#" title="Official U.S. Army Slideshare"><span>Official U.S. Army Slideshare</span></a></li>
+  <li class="social-button-black youtube-button"><a href="#" title="Official U.S. Army Youtube"><span>Official U.S. Army Youtube</span></a></li>
+  <li class="social-button-black instagram-button"><a href="#" title="Official U.S. Army Instagram"><span>Official U.S. Army Instagram</span></a></li>
+  <li class="social-button-black vimeo-button"><a href="#" title="Official U.S. Army Vimeo"><span>Official U.S. Army Vimeo</span></a></li>
+  <li class="social-button-black linkedin-button"><a href="#" title="Official U.S. Army Linkedin"><span>Official U.S. Army Linkedin</span></a></li>
+  <li class="social-button-black armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span>Official U.S. Army Army Live Blog</span></a></li>
+  <li class="social-button-black snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
+  <li class="social-button-black email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
+</ul>
