didnt realize there was already a mixin for this!

--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -669,8 +669,7 @@
 .social-button-gold-lg,
 .social-button-sm {
   a {
-    color: transparent;
-    font: 0/0 a;
+    @include replace-text;
     outline: 0 none;
   }
 }
