reddit icon added and a few html changes

--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -36,6 +36,7 @@ $social-branding: (
     facebook: #3b5999,
     linkedin: #0077b5,
     pinterest: #bd081c,
+    reddit: #ff4500,
     email: #2f2f2f,
     print: #2f2f2f
 );
