--- a/_includes/elements/footer.html
+++ b/_includes/elements/footer.html
@@ -1,26 +1,25 @@
 <footer>
     <section id="social-id" class="social">
-        <div class="social-button facebook-button">
-            <a target="_blank" href="https://www.facebook.com/USArmy"><span>Official U.S. Army Facebook</span></a>
-        </div>
-        <div class="social-button twitter-button">
-            <a target="_blank" href="https://twitter.com/USArmy"><span>Official U.S. Army Twitter</span></a>
-        </div>
-        <div class="social-button googleplus-button">
-            <a target="_blank" href="https://plus.google.com/114333599862985909549"><span>Official U.S. Army Google+</span></a>
-        </div>
-        <div class="social-button pinterest-button">
-            <a target="_blank" href="http://pinterest.com/USarmy"><span>Official U.S. Army Pinterest</span></a>
-        </div>
-        <div class="social-button youtube-button">
-            <a target="_blank" href="https://www.youtube.com/USarmy"><span>Official U.S. Army Youtube</span></a>
-        </div>
-        <div class="social-button flickr-button">
-            <a target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
-        </div>
-        <div class="social-button instagram-button">
-            <a target="_blank" href="https://instagram.com/usarmy"><span>Official U.S. Army Instagram</span></a>
-        </div>
+        <ul>
+            <li class="social-button facebook-button">
+                <a target="_blank" href="https://www.facebook.com/USArmy"><span>Official U.S. Army Facebook</span></a>
+            </li>
+            <li class="social-button twitter-button">
+                <a target="_blank" href="https://twitter.com/USArmy"><span>Official U.S. Army Twitter</span></a>
+            </li>
+            <li class="social-button googleplus-button">
+                <a target="_blank" href="https://plus.google.com/114333599862985909549"><span>Official U.S. Army Google+</span></a>
+            </li>
+            <li class="social-button youtube-button">
+                <a target="_blank" href="https://www.youtube.com/USarmy"><span>Official U.S. Army Youtube</span></a>
+            </li>
+            <li class="social-button flickr-button">
+                <a target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
+            </li>
+            <li class="social-button instagram-button">
+                <a target="_blank" href="https://instagram.com/usarmy"><span>Official U.S. Army Instagram</span></a>
+            </li>
+        </ul>
     </section>
     <section class="footer-bottom">
         <ul>
