--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -70,39 +70,22 @@
                   <li class="social">
                     <ul>
                       <li class="social-button facebook-button">
-                        <a target="_blank" href="https://www.facebook.com/USArmy">
-                          <span>Official U.S. Army Facebook</span>
-                        </a>
+                        <a target="_blank" href="https://www.facebook.com/USArmy"><span>Official U.S. Army Facebook</span></a>
                       </li>
                       <li class="social-button twitter-button">
-                        <a target="_blank" href="https://twitter.com/USArmy">
-                          <span>Official U.S. Army Twitter</span>
-                        </a>
+                        <a target="_blank" href="https://twitter.com/USArmy"><span>Official U.S. Army Twitter</span></a>
                       </li>
                       <li class="social-button googleplus-button">
-                        <a target="_blank" href="https://plus.google.com/114333599862985909549">
-                          <span>Official U.S. Army Google+</span>
-                        </a>
-                      </li>
-                      <li class="social-button pinterest-button">
-                        <a target="_blank" href="http://pinterest.com/USarmy">
-                          <span>Official U.S. Army Pinterest</span>
-                        </a>
+                        <a target="_blank" href="https://plus.google.com/114333599862985909549"><span>Official U.S. Army Google+</span></a>
                       </li>
                       <li class="social-button youtube-button">
-                        <a target="_blank" href="https://www.youtube.com/USarmy">
-                          <span>Official U.S. Army Youtube</span>
-                        </a>
+                        <a target="_blank" href="https://www.youtube.com/USarmy"><span>Official U.S. Army Youtube</span></a>
                       </li>
                       <li class="social-button flickr-button">
-                        <a target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter">
-                          <span>Official U.S. Army Flickr</span>
-                        </a>
+                        <a target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
                       </li>
                       <li class="social-button instagram-button">
-                        <a target="_blank" href="https://instagram.com/usarmy">
-                          <span>Official U.S. Army Instagram</span>
-                        </a>
+                        <a target="_blank" href="https://instagram.com/usarmy"><span>Official U.S. Army Instagram</span></a>
                       </li>
                     </ul>
                   </li>
@@ -110,7 +93,7 @@
           </div>
           <ul class="quicklinks">
             <li><a href="//www.army.mil/info/a-z/">ARMY A-Z</a></li>
-            <li><a href="//www.army.mil/media/socialmedia/">SOCIAL MEDIA</a></li>
+            <li><a href="//www.army.mil/socialmedia/">SOCIAL MEDIA</a></li>
             <li><a href="https://www.us.army.mil/">AKO</a></li>
             <li><a href="/contact">CONTACT US</a></li>
             <li><a href="//www.army.mil/join/">JOIN</a></li>
