--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -13,6 +13,7 @@
   <li class="social-button armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span>Official U.S. Army Army Live Blog</span></a></li>
   <li class="social-button snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
   <li class="social-button email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
+  <li class="social-button reddit-button"><a href="#" title="Official U.S. Army Reddit"><span>Official U.S. Army Reddit</span></a></li>
   <!-- Regular Black Buttons -->
   <li class="social-button-black facebook-button"><a href="#" title="Official U.S. Army Facebook"><span>Official U.S. Army Facebook</span></a></li>
   <li class="social-button-black twitter-button"><a href="#" title="Official U.S. Army Twitter"><span>Official U.S. Army Twitter</span></a></li>
@@ -27,4 +28,5 @@
   <li class="social-button-black armylive-button"><a href="#" title="Official U.S. Army Army Live Blog"><span>Official U.S. Army Army Live Blog</span></a></li>
   <li class="social-button-black snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
   <li class="social-button-black email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
+  <li class="social-button-black reddit-button"><a href="#" title="Official U.S. Army Reddit"><span>Official U.S. Army Reddit</span></a></li>
 </ul>
