added missing sm buttons

--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -14,6 +14,13 @@
   <li class="social-button snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
   <li class="social-button email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
   <li class="social-button reddit-button"><a href="#" title="Official U.S. Army Reddit"><span>Official U.S. Army Reddit</span></a></li>
+  <li class="social-button ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span>Official U.S. Army USTREAM</span></a></li>
+  <li class="social-button smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span>Official U.S. Army SmugMug</span></a></li>
+  <li class="social-button issuu-button"><a href="#" title="Official U.S. Army issuu"><span>Official U.S. Army issuu</span></a></li>
+  <li class="social-button googlemaps-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
+  <li class="social-button blogger-button"><a href="#" title="Official U.S. Army Blogger"><span>Official U.S. Army Blogger</span></a></li>
+  <li class="social-button rss-button"><a href="#" title="Official U.S. Army RSS"><span>Official U.S. Army RSS</span></a></li>
+  <li class="social-button soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span>Official U.S. Army Soundcloud</span></a></li>
   <!-- Regular Black Buttons -->
   <li class="social-button-black facebook-button"><a href="#" title="Official U.S. Army Facebook"><span>Official U.S. Army Facebook</span></a></li>
   <li class="social-button-black twitter-button"><a href="#" title="Official U.S. Army Twitter"><span>Official U.S. Army Twitter</span></a></li>
@@ -29,4 +36,11 @@
   <li class="social-button-black snapchat-button"><a href="#" title="Official U.S. Army Snapchat"><span>Official U.S. Army Snapchat</span></a></li>
   <li class="social-button-black email-button"><a href="#" title="Official U.S. Army Email"><span>Official U.S. Army Email</span></a></li>
   <li class="social-button-black reddit-button"><a href="#" title="Official U.S. Army Reddit"><span>Official U.S. Army Reddit</span></a></li>
+  <li class="social-button-black ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span>Official U.S. Army USTREAM</span></a></li>
+  <li class="social-button-black smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span>Official U.S. Army SmugMug</span></a></li>
+  <li class="social-button-black issuu-button"><a href="#" title="Official U.S. Army issuu"><span>Official U.S. Army issuu</span></a></li>
+  <li class="social-button-black googlemaps-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
+  <li class="social-button-black blogger-button"><a href="#" title="Official U.S. Army Blogger"><span>Official U.S. Army Blogger</span></a></li>
+  <li class="social-button-black rss-button"><a href="#" title="Official U.S. Army RSS"><span>Official U.S. Army RSS</span></a></li>
+  <li class="social-button-black soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span>Official U.S. Army Soundcloud</span></a></li>
 </ul>
