--- a/css/guide.scss
+++ b/css/guide.scss
@@ -339,6 +339,8 @@ section {
             vertical-align: middle;
           }
         }
+
+        &.soundcloud-button a { width: 75px; }
       
       }
       .social-button {
