--- a/_scss/elements/_social.scss
+++ b/_scss/elements/_social.scss
@@ -17,7 +17,11 @@
 }
 
 #social-id .social-button {
-  padding: 15px 16px;
+  padding: 15px 10px;
+
+  @include breakpoints(nav tablet lg_tablet sm_desktop desktop large really_big) {
+    padding: 15px 16px;
+  }
 
   a { padding: 0; }
 }
