--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -105,8 +105,8 @@
                   <input name="utf8" type="hidden" value="&#x2713;" />
                   <input id="affiliate" name="affiliate" type="hidden" value="www.army.mil" />
                 </div>
-                <label for="query">Search news, photos and videos on Army.mil</label>
-                <input autocomplete="off" placeholder="Search" class="usagov-search-autocomplete" id="query" name="query" type="text" />
+                <label for="usagov-search-query">Search news, photos and videos on Army.mil</label>
+                <input autocomplete="off" placeholder="Search" class="usagov-search-autocomplete" id="usagov-search-query" name="query" type="text" />
                 <input aria-label="Search" name="commit" type="submit" value="" class="search-submit-button" />
             </form>
         </div>
