--- a/_includes/elements/news.html
+++ b/_includes/elements/news.html
@@ -1,4 +1,10 @@
 <div class="news">
+    <div class="heading-container">
+        <h4>NEWS</h4>
+        <div class="right">
+            <a href="https://www.army.mil/news/">View All News<span class="view-more-arrow-sm"></span></a>
+        </div>
+    </div>
     <!-- remove class no-dates to see dates -->
     <ul class="no-dates">
         <li>
