updates to form validation, new news elem, and some print css

--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -53,3 +53,4 @@ $dark-gray-color: #57584F;
 $captions-background-color: #2F312B;
 $light-gray-color: #f7f7f7;
 $lighter-gray-color: #f2f2f2;
+$input-focus: #0071bb;
