--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -27,3 +27,8 @@
 // Functions
 // ----------------------------------------------------------------------
 @import "base/functions";
+
+// ----------------------------------------------------------------------
+// Print
+// ----------------------------------------------------------------------
+@import "base/print";
