--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -32,7 +32,7 @@
                         <li><a href="/news">Army Worldwide</a></li>
                         <li><a href="/news/newsreleases">Press Releases</a></li>
                         <li><a href="/standto">STAND-TO!</a></li>
-                        <li><a href="https://www.army.mil/soldiers">Army Blog</a></li>
+                        <li><a href="https://www.army.mil/soldiers">Soldiers Features</a></li>
                       </ul>
                   </li>
                   <li>
