updated path to usagov-sayt custom styles

--- a/_scss/elements/_header.scss
+++ b/_scss/elements/_header.scss
@@ -10,7 +10,7 @@
 // ----------------------------------------------------------------------
 // Modules
 // ----------------------------------------------------------------------
-@import "modules/usagov-sayt";
+@import "../modules/usagov-sayt";
 
 // ----------------------------------------------------------------------
 // CSS
