added inline link styles to the bodytext mixin

--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -54,3 +54,4 @@ $captions-background-color: #2F312B;
 $light-gray-color: #f7f7f7;
 $lighter-gray-color: #f2f2f2;
 $input-focus: #0071bb;
+$input-focus-dark: #00558c;
