--- a/_layouts/banners.html
+++ b/_layouts/banners.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/css/banners.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../css/banners.css" type="text/css" media="screen">
 </head>
 <body>
     {% include elements/upgrade.html %}
