move bodytext from custom-mixins to base, since it utilizes base/colors

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -17,6 +17,7 @@
 @import "base/colors";
 @import "base/defaults";
 @import "base/helper-classes";
+@import "base/bodytext";
 
 // ----------------------------------------------------------------------
 // Modules
