changed googlemaps to periscope

--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -17,7 +17,7 @@
   <li class="social-button ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span>Official U.S. Army USTREAM</span></a></li>
   <li class="social-button smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span>Official U.S. Army SmugMug</span></a></li>
   <li class="social-button issuu-button"><a href="#" title="Official U.S. Army issuu"><span>Official U.S. Army issuu</span></a></li>
-  <li class="social-button googlemaps-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
+  <li class="social-button periscope-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
   <li class="social-button blogger-button"><a href="#" title="Official U.S. Army Blogger"><span>Official U.S. Army Blogger</span></a></li>
   <li class="social-button rss-button"><a href="#" title="Official U.S. Army RSS"><span>Official U.S. Army RSS</span></a></li>
   <li class="social-button soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span>Official U.S. Army Soundcloud</span></a></li>
@@ -39,7 +39,7 @@
   <li class="social-button-black ustream-button"><a href="#" title="Official U.S. Army USTREAM"><span>Official U.S. Army USTREAM</span></a></li>
   <li class="social-button-black smugmug-button"><a href="#" title="Official U.S. Army SmugMug"><span>Official U.S. Army SmugMug</span></a></li>
   <li class="social-button-black issuu-button"><a href="#" title="Official U.S. Army issuu"><span>Official U.S. Army issuu</span></a></li>
-  <li class="social-button-black googlemaps-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
+  <li class="social-button-black periscope-button"><a href="#" title="Official U.S. Army Google Maps"><span>Official U.S. Army Google Maps</span></a></li>
   <li class="social-button-black blogger-button"><a href="#" title="Official U.S. Army Blogger"><span>Official U.S. Army Blogger</span></a></li>
   <li class="social-button-black rss-button"><a href="#" title="Official U.S. Army RSS"><span>Official U.S. Army RSS</span></a></li>
   <li class="social-button-black soundcloud-button"><a href="#" title="Official U.S. Army Soundcloud"><span>Official U.S. Army Soundcloud</span></a></li>
