--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -280,7 +280,7 @@
     width: 56px;
   }
   
-  &.googlemaps-button span {
+  &.periscope-button span {
     background-position: -414px -216px;
     width: 20px;
   }
@@ -389,7 +389,7 @@
     width: 56px;
   }
   
-  &.googlemaps-button span {
+  &.periscope-button span {
     background-position: -414px -166px;
     width: 20px;
   }
@@ -498,8 +498,8 @@
     background-position: -358px -191px;
   }
   
-  &.googlemaps-button a:hover span,
-  &.googlemaps-button a:focus span {
+  &.periscope-button a:hover span,
+  &.periscope-button a:focus span {
     background-position: -414px -191px;
   }
   
