Adding rel="noopener noreferrer" to links using target="_blank" and going to 3rd party domains.

--- a/_includes/elements/footer.html
+++ b/_includes/elements/footer.html
@@ -2,19 +2,19 @@
     <section id="social-id" class="social">
         <ul>
             <li class="social-button facebook-button">
-                <a target="_blank" href="https://www.facebook.com/USArmy"><span>Official U.S. Army Facebook</span></a>
+                <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/USArmy"><span>Official U.S. Army Facebook</span></a>
             </li>
             <li class="social-button twitter-button">
-                <a target="_blank" href="https://twitter.com/USArmy"><span>Official U.S. Army Twitter</span></a>
+                <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/USArmy"><span>Official U.S. Army Twitter</span></a>
             </li>
             <li class="social-button youtube-button">
-                <a target="_blank" href="https://www.youtube.com/USarmy"><span>Official U.S. Army Youtube</span></a>
+                <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/USarmy"><span>Official U.S. Army Youtube</span></a>
             </li>
             <li class="social-button flickr-button">
-                <a target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
+                <a rel="noopener noreferrer" target="_blank" href="https://www.flickr.com/photos/soldiersmediacenter"><span>Official U.S. Army Flickr</span></a>
             </li>
             <li class="social-button instagram-button">
-                <a target="_blank" href="https://instagram.com/usarmy"><span>Official U.S. Army Instagram</span></a>
+                <a rel="noopener noreferrer" target="_blank" href="https://instagram.com/usarmy"><span>Official U.S. Army Instagram</span></a>
             </li>
         </ul>
     </section>
