--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -38,16 +38,16 @@
 
                     <ul class="social-links">
                         <li class="social-button facebook-button">
-                            <a target="_blank" href="https://www.facebook.com/secarmy22/" title="Secretary of the Army Eric Fanning Facebook"><span>Secretary of the Army Eric Fanning Facebook</span></a>
+                            <a rel="noopener noreferrer" target="_blank" href="https://www.facebook.com/secarmy22/" title="Secretary of the Army Eric Fanning Facebook"><span>Secretary of the Army Eric Fanning Facebook</span></a>
                         </li>
                         <li class="social-button twitter-button">
-                            <a target="_blank" href="https://twitter.com/SECARMY" title="Secretary of the Army Eric Fanning Twitter"><span>Secretary of the Army Eric Fanning Twitter</span></a>
+                            <a rel="noopener noreferrer" target="_blank" href="https://twitter.com/SECARMY" title="Secretary of the Army Eric Fanning Twitter"><span>Secretary of the Army Eric Fanning Twitter</span></a>
                         </li>
                         <li class="social-button flickr-button">
-                            <a target="_blank" href="https://www.flickr.com/photos/sec-army-pao/sets" title="Secretary of the Army Eric Fanning Flickr"><span>Secretary of the Army Eric Fanning Flickr</span></a>
+                            <a rel="noopener noreferrer" target="_blank" href="https://www.flickr.com/photos/sec-army-pao/sets" title="Secretary of the Army Eric Fanning Flickr"><span>Secretary of the Army Eric Fanning Flickr</span></a>
                         </li>
                         <li class="social-button instagram-button">
-                            <a target="_blank" href="https://www.instagram.com/secarmy/" title="Secretary of the Army Eric Fanning Instagram"><span>Secretary of the Army Eric Fanning Instagram</span></a>
+                            <a rel="noopener noreferrer" target="_blank" href="https://www.instagram.com/secarmy/" title="Secretary of the Army Eric Fanning Instagram"><span>Secretary of the Army Eric Fanning Instagram</span></a>
                         </li>
                         <li class="social-button snapchat-button">
                             <a target="_blank" href="https://www.army.mil/article/172345" title="Secretary of the Army Eric Fanning Snapchat"><span>Secretary of the Army Eric Fanning Snapchat</span></a>
