--- a/_scss/_all.scss
+++ b/_scss/_all.scss
@@ -13,6 +13,7 @@
 // ----------------------------------------------------------------------
 @import "elements/accordion";
 @import "elements/announcements";
+@import "elements/blockquote";
 @import "elements/buttons";
 @import "elements/custom-select";
 @import "elements/dropdown-nav";
