--- a/_scss/elements/_blockquote.scss
+++ b/_scss/elements/_blockquote.scss
@@ -2,7 +2,7 @@
   blockquote {
     border-left: 4px solid map-get($army-branding, gold);
     padding: 5px 30px;
-    margin-bottom: 0 0 1.25em 0;
+    margin: 0 0 1.25em 0;
     font-style: italic;
     font-size: 1.25em;
     line-height: 1.625;
